--- a/styles/style.css
+++ b/styles/style.css
@@ -15,19 +15,21 @@
   --c14: #222;
   --c15: #111;
   --c16: #000;
+
+  color-scheme: light dark;
 }
 
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
-  color: var(--c2);
+  color: light-dark(var(--c14), var(--c2));
 }
 
-#main {
+#particles {
   width: 100%;
   height: 100%;
-  background-color: var(--c15);
+  background-color: light-dark(var(--c1), var(--c15));
   position: absolute;
   overflow: hidden;
   z-index: -1;
