--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 :root {
   color-scheme: light dark;
+  font-size: 100%;
 }
 
 * {
@@ -27,6 +28,8 @@
 
 .name {
   display: flex;
-  margin: calc(50vh - 1em) auto 0 auto;
-  font-size: 4em;
+  font-size: clamp(2rem, 6vw, 4rem);
+  margin: calc(50vh - 3rem) auto 0;
+  padding: 0 1rem;
+  line-height: 1.1;
 }
